--- a/_config.yml
+++ b/_config.yml
@@ -19,17 +19,18 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Jed# Software
-email: your-email@example.com
+email: info@jedsharpsoftware.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Let's write some free and open source software!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: jeremydumais
+github_username:  jeremydumais
+telegram_username: jeremydumais
+linkedin_username: jeremy-dumais-12996b23
 
 # Build settings
+
 # theme: minima
 plugins:
   - jekyll-feed
@@ -39,6 +40,10 @@ remote_theme: jekyll/minima
 
 minima:
   skin: dark
+header_pages:
+  - blog.markdown
+  - projects.markdown
+  - about.markdown
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
